prevent raw content overflow

--- a/web/app/components/raw-content/raw-content.scss
+++ b/web/app/components/raw-content/raw-content.scss
@@ -1,4 +1,6 @@
 .raw-content {
+  word-break: break-word;
+
   p {
     margin: 0;
 
